@@ -8,15 +8,18 @@ import com.linkedin.common.OwnerArray;
 import com.linkedin.common.Ownership;
 import com.linkedin.common.urn.UrnUtils;
 import com.linkedin.data.template.RecordTemplate;
-import com.linkedin.metadata.aspect.patch.template.CompoundKeyTemplate;
-import java.util.Arrays;
+import com.linkedin.metadata.aspect.patch.template.ArrayMergingTemplate;
+import java.util.List;
 import javax.annotation.Nonnull;
 
-public class OwnershipTemplate extends CompoundKeyTemplate<Ownership> {
+public class OwnershipTemplate implements ArrayMergingTemplate<Ownership> {
 
   private static final String OWNERS_FIELD_NAME = "owners";
   private static final String OWNER_FIELD_NAME = "owner";
   private static final String TYPE_FIELD_NAME = "type";
+  private static final String TYPE_URN_FIELD_NAME = "typeUrn";
+  private static final String ATTRIBUTION_SOURCE =
+      "attribution" + UNIT_SEPARATOR_DELIMITER + "source";
 
   @Override
   public Ownership getSubtype(RecordTemplate recordTemplate) throws ClassCastException {
@@ -48,13 +51,17 @@ public class OwnershipTemplate extends CompoundKeyTemplate<Ownership> {
   @Override
   public JsonNode transformFields(JsonNode baseNode) {
     return arrayFieldToMap(
-        baseNode, OWNERS_FIELD_NAME, Arrays.asList(OWNER_FIELD_NAME, TYPE_FIELD_NAME));
+        baseNode,
+        OWNERS_FIELD_NAME,
+        List.of(OWNER_FIELD_NAME, TYPE_FIELD_NAME, TYPE_URN_FIELD_NAME, ATTRIBUTION_SOURCE));
   }
 
   @Nonnull
   @Override
   public JsonNode rebaseFields(JsonNode patched) {
     return transformedMapToArray(
-        patched, OWNERS_FIELD_NAME, Arrays.asList(OWNER_FIELD_NAME, TYPE_FIELD_NAME));
+        patched,
+        OWNERS_FIELD_NAME,
+        List.of(OWNER_FIELD_NAME, TYPE_FIELD_NAME, TYPE_URN_FIELD_NAME, ATTRIBUTION_SOURCE));
   }
 }
